<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_primary_color"
    tools:context=".Calculadora">

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/resultado"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="96sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Agrupación de botones en una cuadrícula -->
    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alignmentMode="alignMargins"
        android:columnCount="4"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultado">

        <!-- Botones numéricos -->
        <Button
            android:id="@+id/btnBorrarTodo"
            style="@style/BotonOperacion"
            android:text="@string/btn_eraseAll" />

        <Button
            android:id="@+id/btnParentesis"
            style="@style/BotonOperacion"
            android:text="@string/btn_parenthesis" />

        <Button
            android:id="@+id/btnPorcentaje"
            style="@style/BotonOperacion"
            android:text="@string/btn_porcentage" />

        <Button
            android:id="@+id/btnDivision"
            style="@style/BotonOperacion"
            android:text="@string/btn_split" />

        <Button
            android:id="@+id/btnSiete"
            style="@style/BotonNumerico"
            android:text="@string/btn_seven" />

        <Button
            android:id="@+id/btnOcho"
            style="@style/BotonNumerico"
            android:text="@string/btn_eight" />

        <Button
            android:id="@+id/btnNueve"
            style="@style/BotonNumerico"
            android:text="@string/btn_nine" />

        <Button
            android:id="@+id/btnMultiplicacion"
            style="@style/BotonOperacion"
            android:text="@string/btn_multiply" />

        <Button
            android:id="@+id/btnCuatro"
            style="@style/BotonNumerico"
            android:text="@string/btn_four" />

        <Button
            android:id="@+id/btnCinco"
            style="@style/BotonNumerico"
            android:text="@string/btn_five" />

        <Button
            android:id="@+id/btnSeis"
            style="@style/BotonNumerico"
            android:text="@string/btn_six" />

        <Button
            android:id="@+id/btnRestar"
            style="@style/BotonOperacion"
            android:text="@string/btn_subtract" />

        <Button
            android:id="@+id/btnUno"
            style="@style/BotonNumerico"
            android:text="@string/btn_one" />

        <Button
            android:id="@+id/btnDos"
            style="@style/BotonNumerico"
            android:text="@string/btn_two" />

        <Button
            android:id="@+id/btnTres"
            style="@style/BotonNumerico"
            android:text="@string/btn_three" />

        <Button
            android:id="@+id/btnSumar"
            style="@style/BotonOperacion"
            android:text="@string/btn_add" />

        <Button
            android:id="@+id/btnCero"
            style="@style/BotonNumerico"
            android:text="@string/btn_zero" />

        <Button
            android:id="@+id/btnDecimal"
            style="@style/BotonNumerico"
            android:text="@string/btn_spot" />

        <Button
            android:id="@+id/btnBorrar"
            style="@style/BotonNumerico"
            android:text="@string/btn_delete" />

        <Button
            android:id="@+id/btnIgual"
            style="@style/BotonOperacion"
            android:text="@string/btn_equal" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
